# house-price-trade

./: .gitattributes  .gitignore  Dockerfile  README.md  app.py  build_trigger.txt  lightgbm_base_features.pkl  lightgbm_cluster_mean.pkl  lightgbm_community_mean.pkl  lightgbm_feature_names.pkl  lightgbm_global_mean.pkl  lightgbm_house_price_model.txt  lightgbm_kmeans.pkl  lightgbm_label_encoder.pkl  lightgbm_scaler.pkl  my_lightgbm_predict.py  my_lightgbm_predict_example.py  pyproject.toml  railway.toml  requirements.txt  vercel.json
templates/: index.html  predict.html
