[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "house-price-predict"
version = "0.1.0"
dependencies = [
    "Flask==2.3.3",
    "lightgbm==4.1.0",
    "pandas==2.0.3",
    "numpy==1.26.4",
    "scikit-learn==1.3.2",
    "joblib==1.3.2",
    "Werkzeug==2.3.7",
    "gunicorn==21.2.0"
]